testsuite/tests/checks/unnamed_blocks/test.out
blocks.adb:5:7: error: non-named block/loop statement
5 |       declare                                  --  FLAG
  |       ^^^^ 

blocks.adb:10:10: error: non-named block/loop statement
10 |          for J in S'Range loop                 --  FLAG
   |          ^^^^^^^^^ 

blocks.adb:14:13: error: non-named block/loop statement
14 |             for K in S'Range loop              --  FLAG
   |             ^^^^^^^^^ 

blocks.adb:22:4: error: non-named block/loop statement
22 |    begin          --  FLAG
   |    ^^^^ 

blocks.adb:31:7: error: non-named block/loop statement
31 |       loop        --  FLAG
   |       ^^^^^^^^^ 

